ocnversion from "history" to "mountains"
delete individual history files. update paths and some variable names.
minor changes to templates.

TODO: update electron app to use bootstrap styles.

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <title>Heroes Please</title>
-
-  <xmp theme="amelia" style="display:none;">
+  <head>
+  <title>Mountains Please</title>
+  </head>
+  <body>
+  <xmp theme="slate" style="display:none;">
         
